--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								<img src="images/bg_2.jpg" alt="Designed by Suhail Akhtar">
 							</figure>
 							<h1>Suhail Akhtar</h1>
-							<p>My name is <a href="#">Suhail Akhtar</a>. I basically belongs to Firozabad (UP), India. I have Completed my <a href="#">B.Tech</a>, from SCRIET, CCS University, Meerut. I have 3 years experience in different fields like: Web Dovelopment, Product Listing on E-Commerce Sites, WordPress, Telecaller and Data Entry etc and my hobbies are Watching video related technolgies, Photography, Trevelling & Listening Music. </p>
+							<p>My name is <a href="#">Suhail Akhtar</a>. I basically belongs to Firozabad (UP), India. I have completed my <a href="#">B.Tech</a>, from SCRIET, CCS University, Meerut. I have 3 years experience in different fields like: Web Dovelopment, Product Listing on E-Commerce Sites, WordPress, Telecaller and Data Entry etc and my hobbies are Watching video related technolgies, Photography, Trevelling & Listening Music. </p>
 						</div>
 					</div>
 					<div class="row">
@@ -105,7 +105,7 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>I have Completed my study 10th and 12th (State Board) and graduate with good percentage. </p>
+							<p>I have completed my study 10th and 12th (State Board) and graduated with good percentage. </p>
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
@@ -113,7 +113,7 @@
 								</div>
 								<div class="fh5co-text">
 									<h2>2015-2019</h2>
-									<p>I have Completed My B.Tech with Computer Science from SRCIET, CCS University, Meerut in 2019.</p>
+									<p>I have completed My B.Tech with Computer Science from SRCIET, CCS University, Meerut in 2019.</p>
 								</div>
 							</div>
 
@@ -167,7 +167,7 @@
 								<div class="fh5co-text">
 									<h2>2020-2021</h2>
 									<h3>WordPress Website</h3>
-									<p>6 Month experience in WordPress E-Commerce Website and it's maintenance. </p>
+									<p>6 months experience in WordPress E-Commerce Website and it's maintenance. </p>
 								</div>
 							</div>
 
@@ -178,7 +178,7 @@
 								<div class="fh5co-text">
 									<h2>2019-2020</h2>
 									<h3>Web Development</h3>
-									<p>1 yrs experience in Web Development and convert pdf tamplate into HTML,CSS, JS & PHP.</p>
+									<p>1 yrs experienced in Web Development and convert pdf tamplates into HTML,CSS, JS & PHP.</p>
 								</div>
 							</div>
 
@@ -197,7 +197,7 @@
 							<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+							<div class="chart" data-percent="93"><span><strong>CSS</strong>93%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 							<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
